# makoisa-ai

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_ROADMAP.md  Dockerfile  FINAL_STATUS_REPORT.md  GOOGLE_ADS_IMPLEMENTATION_SUMMARY.md  GOOGLE_ADS_TESTING_GUIDE.md  INGREDIENT_MATCHING_IMPROVEMENTS.md  LICENSE  LICENSE_COMMERCIAL.md  PHASE4_COMPLETE.md  PHASE7_COMPLETE.md  PRODUCT_SCRAPING_COMPLETE.md  README.md  REBRANDING_SUMMARY.md  RECIPE_AI_COMPLETE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  activate_makoisa_env.sh  additional_products_3735.json  all_product_urls.json  all_products_20250531_165819.json  analyze_products.py  cloud-run-service-deployed.yaml  cloud-run-service.yaml  dashboard.py  demo_phase_3.py  deploy.sh  dev.sh  discover_all_products.py  discover_k_ruoka_products.py  docker-compose.yml  explore_headless.py  explore_k_ruoka.py  explore_k_ruoka_advanced.py  explore_k_ruoka_simple.py  explore_site.py  explore_store_page.py  (+62 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yml  dependency-updates.yml  pr-checks.yml  release.yml
commercial/: README.md  __init__.py  google_ads.py
docs/: github-actions-setup.md  phase4-container-cloudrun.md  phase7-observability.md  phase8-hardening-optimization.md
loader/: __init__.py  config.py
observability/: __init__.py  health.py  logging.py  metrics.py  monitoring.py
recipe-ui/: package-lock.json  package.json  tailwind.config.ts
recipe-ui/src/: index.css
recipe-ui/src/components/: Features.tsx  FoodCard.tsx  FoodGrid.tsx  Footer.tsx  GoogleAds.tsx  Header.tsx  Hero.tsx  PriceTrends.tsx
recipe-ui/src/components/ui/: index.ts
recipe-ui/src/hooks/: use-toast.ts
recipe-ui/src/pages/: Index.tsx  NotFound.tsx
recipe_ai/: BUGFIX_SUMMARY.md  Dockerfile  GOOGLE_ADS_IMPLEMENTATION.md  PRICE_FEATURES_ENHANCED.md  README.md  __init__.py  cloud-run-service.yaml  cloudbuild.yaml  config.py  deploy.sh  deploy_simple.sh  healthcheck.py  ingredient_matcher.py  loader_config.py  main.py  quick_deploy.sh  recipe_generator.py  requirements.txt  vertex_ai_client.py
recipe_ai/loader/: cli.py  config.py  main.py
recipe_ai/ui/: app.py
scraper/: __init__.py  cli.py  main_backup.py  main_fixed.py  selectors.py
tests/: test_loader.py  test_observability.py  test_scraper.py  test_scraper_updated.py  test_server.py
