[project]
name = "makoisa-ai"
version = "1.3.0-dev"
description = "AI-powered Finnish grocery shopping and recipe platform with intelligent price matching and recipe generation"
authors = [
    {name = "Harri Juntunen", email = "harri@juntunen.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "google-cloud-bigquery>=3.11.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.15.0"
]

commercial = [
    "google-cloud-aiplatform>=1.35.0",
    "plotly>=5.15.0",
    "altair>=5.0.0"
]

all = [
    "makoisa-ai[dev,commercial]"
]

[project.scripts]
makoisa-ai = "src.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
